ACLOCAL_AMFLAGS = @ACLOCAL_CWFLAGS@
EXTRA_DIST = submodules.m4

SUBDIRS = @CW_SUBDIRS@

MAINTAINERCLEANFILES = \
	$(srcdir)/aclocal.m4 \
	$(srcdir)/configure \
	$(srcdir)/Makefile.in \
	$(srcdir)/install-sh \
	$(srcdir)/config.h.in \
	$(srcdir)/config.h.in~ \
	$(srcdir)/compile \
	$(srcdir)/depcomp \
	$(srcdir)/missing \
	$(srcdir)/config.guess \
	$(srcdir)/config.sub \ \
	$(srcdir)/mkinstalldirs \
	$(srcdir)/ltmain.sh \
	$(srcdir)/stamp-h.in \
	$(srcdir)/ChangeLog
